# token-value-map

./: CLAUDE.md  Cargo.toml  DOPAMINE-INTEGRATION.md  README.md  build.rs
src/: animated_data.rs  data.rs  data_types.rs  define_data_macro.rs  egui_keyframe_integration.rs  error.rs  generic_token_value_map.rs  generic_value.rs  interpolation.rs  lib.rs  lua.rs  macros.rs  position.rs  shutter.rs  token.rs  token_value_map.rs  traits.rs  value.rs
src/math/: glam_impl.rs  mod.rs  nalgebra_impl.rs  ultraviolet_impl.rs
src/time_data_map/: mod.rs  sample.rs
tests/: animated_data.rs  animated_data_old.rs  bezier_handles.rs  data.rs  data_types.rs  interpolation.rs  lib.rs  single_keyframe_interpolation.rs  try_convert.rs  try_from_value.rs
tests/time_data_map/: mod.rs
